--- a/thesis.bib
+++ b/thesis.bib
@@ -868,3 +868,20 @@ language={English}
       reportNumber   = "CMS-SUS-11-021, CERN-PH-EP-2012-029",
       SLACcitation   = "%%CITATION = ARXIV:1204.3774;%%",
 }
+
+@article{Chatrchyan:2013fea,
+      author         = "Chatrchyan, Serguei and others",
+      title          = "{Search for new physics in events with same-sign
+                        dileptons and jets in pp collisions at $\sqrt{s}$ = 8
+                        TeV}",
+      collaboration  = "CMS",
+      journal        = "JHEP",
+      volume         = "1401",
+      pages          = "163",
+      doi            = "10.1007/JHEP01(2015)014, 10.1007/JHEP01(2014)163",
+      year           = "2014",
+      eprint         = "1311.6736",
+      archivePrefix  = "arXiv",
+      reportNumber   = "CERN-PH-EP-2013-213",
+      SLACcitation   = "%%CITATION = ARXIV:1311.6736;%%",
+}
