--- a/thesis.tex
+++ b/thesis.tex
@@ -79,7 +79,7 @@
 \newcommand{\notupdated}{\textcolor{red}{Not updated (possibly can't be updated ATM)}}
 \newcommand{\significanceNumber}{$2.2\sigma$\xspace}
 %\newcommand{\invpb}{\ensuremath{\textrm{pb-1}}}
-%\newcommand{\ttbar}{\ensuremath{t+\bar{t}}}
+\newcommand{\ttbar}{\ensuremath{t\bar{t}}\xspace}
 \newcommand{\mc}{Monte Carlo\xspace}
 \newcommand{\Red}{\color{red}}
 \newcommand{\Z}{\text{Z}\xspace}
@@ -95,7 +95,8 @@
 % processes
 %\newcommand{\Ztautau}{\ensuremath{\Z\to\tau\tau}}
 \newcommand{\zjets}{\ensuremath{Z+\textrm{jets}}\xspace}
-\newcommand{\Wjets}{\ensuremath{\PW+\text{jets}}\xspace}
+\newcommand{\Zjets}{\zjets}
+\newcommand{\Wjets}{\ensuremath{\text{W}+\text{jets}}\xspace}
 \newcommand{\DYjets}{\ensuremath{\text{DY}+\text{jets}}\xspace}
 \newcommand{\gjets}{\ensuremath{\gamma+\text{jets}}\xspace}
 \newcommand{\ttll}{$\ttbar\rightarrow\ell^+\ell^-$}
